<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="TcoDatamanConfig_v_5_x_x" Id="{511d8c94-eb01-0087-0253-264e18e831b8}">
    <Declaration><![CDATA[TYPE
    TcoDatamanConfig_v_5_x_x :
    STRUCT
        ResultDataSize : eDatamanResultDataSize_v_5_x_x := eDatamanResultDataSize_v_5_x_x.RESULT_DATA_64B;
        UserDataSize : eDatamanUserDataSize_v_5_x_x := eDatamanUserDataSize_v_5_x_x.USER_DATA_64B;
        DataFormat : eTcoDataFormat := TcoUtilities.eTcoDataFormat.BigEndian;
        ContinuousReading : BOOL := FALSE;
        InfoTime : TIME := T#2S;
        ErrorTime : TIME := T#5S;
    END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>