<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="TcoDatamanResults_v_5_x_x" Id="{beecb9b7-fd6e-0f66-0bfe-155d8e15fda4}">
    <Declaration><![CDATA[TYPE TcoDatamanResults_v_5_x_x :
STRUCT	
	Id: UINT;
	Code: UINT;
	Extended: UINT;
	Length : UINT;
	Data : ARRAY[0..TcoVisionParams.MAX_BYTE_ARRAY] OF BYTE;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>